# rk2

./: CMakeLists.txt  CPack.cmake  CommandPattern.vcxproj  CommandPattern.vcxproj.filters  Program.cpp  tests.cpp
.github/workflows/: build.yml  cpack.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  program
